--- a/src/Program/Program.csproj
+++ b/src/Program/Program.csproj
@@ -12,4 +12,8 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="obj\NextGen.cs" />
+  </ItemGroup>
 </Project>
